Inputs test working

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,20 +1,20 @@
-; Engine configuration file.
-; It's best edited using the editor UI and not directly,
-; since the parameters that go here are not all obvious.
-; 
-; Format: 
-;   [section] ; section goes between []
-;   param=value ; assign values to parameters
-
-
 [application]
 
-
 name="Desktop"
+main_scene="res://Player.tscn"
 icon="res://icon.png"
 
+[input]
+
+left_joy_p1=[jaxis(0, 0)]
+right_joy_p1=[jaxis(0, 1)]
+up_joy_p1=[jaxis(0, 2)]
+down_joy_p1=[jaxis(0, 3)]
+left_joy_p2=[jaxis(1, 0)]
+right_joy_p2=[jaxis(0, 1)]
+up_joy_p2=[jaxis(0, 2)]
+down_joy_p2=[jaxis(0, 3)]
 
 [physics_2d]
-
 
 motion_fix_enabled=true
