--- a/engine.cfg
+++ b/engine.cfg
@@ -6,14 +6,16 @@ icon="res://icon.png"
 
 [input]
 
-left_joy_p1=[jaxis(0, 0)]
-right_joy_p1=[jaxis(0, 1)]
-up_joy_p1=[jaxis(0, 2)]
-down_joy_p1=[jaxis(0, 3)]
-left_joy_p2=[jaxis(1, 0)]
-right_joy_p2=[jaxis(0, 1)]
-up_joy_p2=[jaxis(0, 2)]
-down_joy_p2=[jaxis(0, 3)]
+left_joy_p1=[jaxis(0, 0), key(Left)]
+right_joy_p1=[jaxis(0, 1), key(Right)]
+up_joy_p1=[jaxis(0, 2), key(Up)]
+down_joy_p1=[jaxis(0, 3), key(Down)]
+left_joy_p2=[jaxis(1, 0), key(A)]
+right_joy_p2=[key(D), jaxis(1, 1)]
+up_joy_p2=[key(W), jaxis(1, 2)]
+down_joy_p2=[key(S), jaxis(1, 3)]
+jump_joy_p1=[jbutton(0, 0), key(Up)]
+jump_joy_p2=[jbutton(1, 0), key(W)]
 
 [physics_2d]
 
