--- a/engine.cfg
+++ b/engine.cfg
@@ -6,6 +6,8 @@ icon="res://icon.png"
 
 [input]
 
+pull_joy_p1=[jbutton(0, 2), key(Down)]
+pull_joy_p2=[jbutton(1, 2), key(S)]
 left_joy_p1=[jaxis(0, 0), key(Left)]
 right_joy_p1=[jaxis(0, 1), key(Right)]
 up_joy_p1=[jaxis(0, 2), key(Up)]
