--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="Desktop"
-main_scene="res://Scenes/Game.tscn"
+main_scene="res://Menu/menu.tscn"
 icon="res://icon.png"
 
 [input]
